[tool.poetry]
authors = []
description = ""
name = "boilerplate"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22"
flake8 = "^4"
isort = "^5"
mypy = "^0.931"
pytest = "^6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
